* 2013-10-11 - thorben.betten@open-xchange.com

 - Fix for bug 29232: Handle a meanwhile expunged message appropriately
 - Fix for bug 29233: Push read-write connection back into pool while signaling that it has been used for reading only
 - Fix for bug 29230: Handle possible "ParsingFeedException" when reading RSS feed's XML content

* 2013-10-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 29214: Fire filestorage events upon copy-operation within the same account
 - Fix for bug 29222: Really delete collected files during batch action execution 

* 2013-10-09 - marcus.klein@open-xchange.com

 - Fix for bug 29195: Added transitional package for open-xchange-l10n-sv-sv to ensure proper upgrade to open-xchange-l10n-sv-se.

* 2013-10-09 - dennis.sieben@open-xchange.com

 - Fix for bug 29200: Moved dry-run exit before the context deletion lines

* 2013-10-09 - thorben.betten@open-xchange.com

 - Fix for bug 29189: Prefer String instead of InetSocketAddress for fast object handling
 - Fix for bug 28718: Extended regular expression for improved look-up of <password> tags
 - Fix for bug 26979: Configurable CSS parsing timeout

* 2013-10-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 29166: Instruct client to move a folder "/.drive" to quarantine

* 2013-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 29136: Do not change session's IP address in case IP-check is turned off and non-white-listed client

* 2013-10-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 28185: Added additional checks when saving distribution list members

* 2013-10-07 - thorben.betten@open-xchange.com

 - Fix for bug 29147: Detect possibly harmful HTML content in image files and force attachment download then
 - Fix for bug 29161: Added missing 'javax.management' imports to MANIFEST.MF files

* 2013-10-05 - thorben.betten@open-xchange.com

 - Fix for bug 29039: Handle DataTruncation exception and throw appropriate error

* 2013-10-04 - thorben.betten@open-xchange.com
