@@ -1,3 +1,8 @@
+* 2013-10-11 - marcus.klein@open-xchange.com
+
+ - Partial fix for bug 26072: Detect changed context class loader in thread pool and restore the original one. Writing error into log file
+   when context class loader is changed.
+
 * 2013-10-11 - thorben.betten@open-xchange.com
 
  - Fix for bug 29232: Handle a meanwhile expunged message appropriately
